--- a/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
+++ b/src/main/resources/com/example/mahin_2207109__cvbuilder/CV_show.fxml
@@ -2,6 +2,7 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,82 +11,87 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane styleClass="root" stylesheets="@../../../CV_show.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mahin_2207109__cvbuilder.show_controller">
-   <left>
-      <AnchorPane styleClass="per_info_side" stylesheets="@../../../CV_show.css" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fx:id="pro_pic" fitHeight="150.0" fitWidth="200.0" layoutX="44.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true" style="-fx-preserve-ratio: true;">
-               <styleClass>
-                  <String fx:value="profile-photo-wrapper" />
-                  <String fx:value="profile-photo-wrapper" />
-               </styleClass>
-            </ImageView>
-            <VBox layoutX="43.0" layoutY="207.0">
+
+<ScrollPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mahin_2207109__cvbuilder.show_controller">
+   <content>
+      <BorderPane styleClass="root" stylesheets="@../../../CV_show.css">
+         <left>
+            <AnchorPane styleClass="per_info_side" stylesheets="@../../../CV_show.css" BorderPane.alignment="CENTER">
                <children>
-                  <Text fx:id="name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="name-title" />
-                  <HBox>
+                  <ImageView fx:id="pro_pic" fitHeight="150.0" fitWidth="200.0" layoutX="44.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true" style="-fx-preserve-ratio: true;">
+                     <styleClass>
+                        <String fx:value="profile-photo-wrapper" />
+                        <String fx:value="profile-photo-wrapper" />
+                     </styleClass>
+                  </ImageView>
+                  <VBox layoutX="43.0" layoutY="207.0">
                      <children>
-                        <Label prefHeight="60.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Email     :  " />
-                        <Label fx:id="email" prefHeight="60.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="mail" />
+                        <Text fx:id="name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="name-title" />
+                        <HBox>
+                           <children>
+                              <Label prefHeight="60.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Email     :  " />
+                              <Label fx:id="email" prefHeight="60.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="mail" />
+                           </children>
+                        </HBox>
+                        <Label prefHeight="43.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Phone    :  " />
+                        <Label prefHeight="43.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Address : " />
                      </children>
-                  </HBox>
-                  <Label prefHeight="43.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Phone    :  " />
-                  <Label prefHeight="43.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="Address : " />
+                  </VBox>
+                  <Label fx:id="phn" layoutX="152.0" layoutY="297.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="phn" />
+                  <Label fx:id="addrs" layoutX="153.0" layoutY="341.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="add" />
                </children>
-            </VBox>
-            <Label fx:id="phn" layoutX="152.0" layoutY="297.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="phn" />
-            <Label fx:id="addrs" layoutX="153.0" layoutY="341.0" styleClass="name-title" stylesheets="@../../../CV_show.css" text="add" />
-         </children>
-      </AnchorPane>
-   </left>
-   <center>
-      <AnchorPane styleClass="edu_info_side" stylesheets="@../../../CV_show.css" BorderPane.alignment="CENTER">
-         <children>
-            <VBox layoutX="25.0" layoutY="14.0">
+            </AnchorPane>
+         </left>
+         <center>
+            <AnchorPane styleClass="edu_info_side" stylesheets="@../../../CV_show.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Educational Qualification:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Text fx:id="ed_q" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-                  <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Skills: ">
-                     <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Text fx:id="skill" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-                  <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Work Experience:">
-                     <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Text fx:id="w_ex" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-                  <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Projects: ">
-                     <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <Text fx:id="projects" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
+                  <VBox layoutX="25.0" layoutY="14.0">
+                     <children>
+                        <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Educational Qualification:">
+                           <font>
+                              <Font name="Segoe UI Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Text fx:id="ed_q" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Text>
+                        <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Skills: ">
+                           <font>
+                              <Font name="Segoe UI Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Text fx:id="skill" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Text>
+                        <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Work Experience:">
+                           <font>
+                              <Font name="Segoe UI Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Text fx:id="w_ex" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Text>
+                        <Label styleClass="header" stylesheets="@../../../CV_show.css" text="Projects: ">
+                           <font>
+                              <Font name="Segoe UI Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Text fx:id="projects" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paragraph" text="Text">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
                </children>
-            </VBox>
-         </children>
-      </AnchorPane>
-   </center>
-</BorderPane>
+            </AnchorPane>
+         </center>
+      </BorderPane>
+   </content>
+</ScrollPane>
